[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pretty-tables"
description = "Create pretty tables from headers and rows, perfect for console output."
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Justintime50" }]
urls = { Homepage = "http://github.com/justintime50/pretty-tables" }
optional-dependencies = { dev = [
    "bandit == 1.9.*",
    "black == 25.*",
    "build == 1.3.*",
    "flake8 == 7.*",
    "Flake8-pyproject == 1.2.*",
    "isort == 7.*",
    "mypy == 1.18.*",
    "pytest == 9.*",
    "pytest-cov == 7.*",
] }

[tool.setuptools.dynamic]
version = { attr = "pretty_tables._version.__version__" }

[tool.setuptools.packages.find]
exclude = ["examples", "test"]

[tool.setuptools.package-data]
pretty_tables = ["py.typed"]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
indent = 4
force_grid_wrap = 2
multi_line_output = 3
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
lines_after_imports = 2
include_trailing_comma = true
use_parentheses = true

[tool.mypy]
disable_error_code = "import-untyped"

[tool.flake8]
max-line-length = 120
extend-ignore = "E203"
