[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pretty-tables"
description = "Create pretty tables from headers and rows, perfect for console output."
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Justintime50" }]
urls = { Homepage = "http://github.com/justintime50/pretty-tables" }
optional-dependencies = { dev = [
    "bandit == 1.9.*",
    "build == 1.3.*",
    "mypy == 1.18.*",
    "pytest == 9.*",
    "pytest-cov == 7.*",
    "ruff == 0.14.*",
] }

[tool.setuptools.dynamic]
version = { attr = "pretty_tables._version.__version__" }

[tool.setuptools.packages.find]
exclude = ["examples", "test"]

[tool.setuptools.package-data]
pretty_tables = ["py.typed"]

[tool.ruff]
line-length = 120

[tool.mypy]
disable_error_code = "import-untyped"
